完成達克萊伊招式表本地化： - 完成爆發攻擊、寶可夢招式、標準招式和同步爆發時招式的本地化 - 統一使用臺灣常用詞彙和專業術語 - 統一按鈕組合和備註說明的格式 - 修正頁面標題和基本資訊

--- a/達克萊伊.html
+++ b/達克萊伊.html
@@ -110,11 +110,11 @@ a:hover {
         <th>傷害值</th>
     </tr>
     <tr>
-        <td>Infinite Eclipse</td>
+        <td>無限日蝕</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>L + R during Synergy Burst</td>
-        <td>貫穿反擊. Powers up during Bad Dreams Rising</td>
+        <td>同步爆發時按 L + R</td>
+        <td>可貫穿反擊。惡夢纏身狀態下威力提升</td>
         <td>198</td>
     </tr>
 </table><h2>寶可夢招式</h2>
@@ -131,80 +131,80 @@ a:hover {
         <td>惡之波動</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>A</td>
-        <td>Powers up during Bad Dreams Rising. Press R during Bad Dreams Rising to transition to Teleportation</td>
+        <td>按 A</td>
+        <td>惡夢纏身狀態下威力提升。惡夢纏身狀態下按 R 可轉換為瞬間移動</td>
         <td>60</td>
     </tr>
     <tr>
-        <td>Dark Pulse: Charge</td>
+        <td>惡之波動：蓄力</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Hold A</td>
-        <td>Powers up in line with Phantom Count. 貫穿反擊.</td>
+        <td>長按 A</td>
+        <td>威力隨幻影計數提升。可貫穿反擊</td>
         <td>40</td>
     </tr>
     <tr>
-        <td>Dark Void</td>
+        <td>暗黑洞</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Forward + A</td>
-        <td>Activates Bad Dreams Rising on hit. Cannot K.O.</td>
+        <td>前 + A</td>
+        <td>命中後啟動惡夢纏身狀態。無法擊倒對手</td>
         <td>0</td>
     </tr>
     <tr>
-        <td>Dark Void: Charge</td>
+        <td>暗黑洞：蓄力</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Forward + Hold A</td>
-        <td>Unblockable. Activates Bad Dreams Rising on hit. Cannot K.O.</td>
+        <td>前 + 長按 A</td>
+        <td>無法防禦。命中後啟動惡夢纏身狀態。無法擊倒對手</td>
         <td>0</td>
     </tr>
     <tr>
-        <td>Nasty Plot</td>
+        <td>詭計</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>Backward + A</td>
-        <td>Changes properties of attacks</td>
+        <td>後 + A</td>
+        <td>改變攻擊特性</td>
         <td>0</td>
     </tr>
     <tr>
-        <td>Nasty Plot: Success</td>
+        <td>詭計：成功</td>
         <td>反擊</td>
         <td>全階段</td>
-        <td>Counters opponents Attack.</td>
-        <td>Adds 1 Phantom</td>
+        <td>反制對手攻擊</td>
+        <td>增加 1 個幻影</td>
         <td>0</td>
     </tr>
     <tr>
         <td>暗影爪</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Midair A</td>
-        <td>Cancels long range attacks. Press R during Bad Dreams Rising to transition into Teleportation</td>
+        <td>空中 A</td>
+        <td>可取消遠距離攻擊。惡夢纏身狀態下按 R 可轉換為瞬間移動</td>
         <td>20</td>
     </tr>
     <tr>
-        <td>Shadow Claw ~ Kick Follow-up</td>
+        <td>暗影爪～踢擊追擊</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Midair A, A with Swords Dance stock</td>
-        <td>Press R during Bad Dreams Rising to transition into Teleportation</td>
+        <td>空中 A，擁有劍舞能量時按 A</td>
+        <td>惡夢纏身狀態下按 R 可轉換為瞬間移動</td>
         <td>85</td>
     </tr>
     <tr>
-        <td>Shadow Claw ~ Slice Follow Up</td>
+        <td>暗影爪～斬擊追擊</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Midair A, Y or X</td>
-        <td>Press R during Bad Dreams Rising to transition into Teleportation</td>
+        <td>空中 A，按 Y 或 X</td>
+        <td>惡夢纏身狀態下按 R 可轉換為瞬間移動</td>
         <td>100</td>
     </tr>
     <tr>
-        <td>Shadow Claw ~ Slice Follow Up: Charge</td>
+        <td>暗影爪～斬擊追擊：蓄力</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Midair A, Hold X or Y</td>
-        <td>Pierces 反擊 attacks. Press R during Bad Dreams Rising to transition into Teleportation</td>
+        <td>空中 A，長按 Y 或 X</td>
+        <td>可貫穿反擊。惡夢纏身狀態下按 R 可轉換為瞬間移動</td>
         <td>140</td>
     </tr>
 </table><h2>標準招式</h2>
@@ -230,39 +230,39 @@ a:hover {
         <td>一般</td>
         <td>全階段</td>
         <td>X + A</td>
-        <td>Can be cancelled with D-Pad or R.</td>
+        <td>可用方向鍵或 R 取消</td>
         <td>70</td>
     </tr>
     <tr>
         <td>蓄力反擊</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Hold X + A</td>
-        <td>貫穿反擊</td>
+        <td>長按 X + A</td>
+        <td>可貫穿反擊</td>
         <td>100</td>
     </tr>
     <tr>
-        <td>Charge Weak Attacks</td>
+        <td>蓄力弱攻擊</td>
         <td>一般</td>
         <td>全階段</td>
-        <td>Charge and release Y</td>
-        <td>Invincible when invisible. 長按 to place a Phantom.</td>
+        <td>蓄力後放開 Y</td>
+        <td>隱形時無敵。長按可放置幻影</td>
         <td></td>
     </tr>
     <tr>
         <td>蓄力強攻擊</td>
         <td>無傷害</td>
         <td>全階段</td>
-        <td>Charge and then release X</td>
-        <td>Restores HP. Increases strength the more phantoms</td>
+        <td>蓄力後放開 X</td>
+        <td>回復生命值。幻影數量越多效果越強</td>
         <td></td>
     </tr>
     <tr>
-        <td>Teleportation</td>
+        <td>瞬間移動</td>
         <td>無傷害</td>
         <td>全階段</td>
-        <td>Midair R</td>
-        <td>Change trajectory with D-Pad. Invincible when invisible</td>
+        <td>空中 R</td>
+        <td>可用方向鍵改變軌跡。隱形時無敵</td>
         <td>0</td>
     </tr>
     <tr>
@@ -278,14 +278,14 @@ a:hover {
         <td>一般</td>
         <td>場地階段</td>
         <td>Y</td>
-        <td>Cancelled with a Pokémon move</td>
+        <td>可被寶可夢招式取消</td>
         <td>48</td>
     </tr>
     <tr>
         <td>寶可連擊2</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Side + Y, Y</td>
+        <td>側 + Y, Y</td>
         <td>無特殊效果</td>
         <td>96</td>
     </tr>
@@ -293,32 +293,32 @@ a:hover {
         <td>側方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Side + Y</td>
-        <td>Cancelled with a Pokémon move. 長按 to change trajectory. Adds a Phantom</td>
+        <td>側 + Y</td>
+        <td>可被寶可夢招式取消。長按可改變軌跡。增加一個幻影</td>
         <td>36</td>
     </tr>
     <tr>
         <td>前方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Forward + Y</td>
-        <td>Adds a Phanton. Shifts phases</td>
+        <td>前 + Y</td>
+        <td>增加一個幻影。切換階段</td>
         <td>40</td>
     </tr>
     <tr>
         <td>後方遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Backward + Y</td>
-        <td>Change trajectory by pressing D-Pad diagonally back. Cancels long range attacks. Places a Phantom</td>
+        <td>後 + Y</td>
+        <td>斜後按方向鍵可改變軌跡。可取消遠距離攻擊。放置一個幻影</td>
         <td>30</td>
     </tr>
     <tr>
         <td>跳躍遠距離攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair Y</td>
-        <td>Cancelled with a Pokémon. Change trajectory with D-Pad. Places a Phantom</td>
+        <td>空中 Y</td>
+        <td>可被寶可夢招式取消。用方向鍵改變軌跡。放置一個幻影</td>
         <td>20</td>
     </tr>
     <tr>
@@ -326,38 +326,38 @@ a:hover {
         <td>一般</td>
         <td>場地階段</td>
         <td>X, X</td>
-        <td>Cancelled with a Pokémon move, or pressing R or B</td>
+        <td>可被寶可夢招式取消，或按 R 或 B</td>
         <td>80</td>
     </tr>
     <tr>
         <td>蓄力追蹤攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>X, Hold X</td>
-        <td>Pierces counter attack and breaks the guard</td>
+        <td>X, 長按 X</td>
+        <td>可貫穿反擊。破壞防禦</td>
         <td>120</td>
     </tr>
     <tr>
-        <td>Backward Attack</td>
+        <td>後方攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Backward + X</td>
+        <td>後 + X</td>
         <td>無特殊效果</td>
         <td>70</td>
     </tr>
     <tr>
-        <td>Backward Attack: Charge</td>
+        <td>後方攻擊：蓄力</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Backward + Hold X</td>
-        <td>Places a Phantom. Pierces 反擊 attacks</td>
+        <td>後 + 長按 X</td>
+        <td>放置一個幻影。可貫穿反擊</td>
         <td>106</td>
     </tr>
     <tr>
         <td>跳躍攻擊</td>
         <td>一般</td>
         <td>場地階段</td>
-        <td>Midair X</td>
+        <td>空中 X</td>
         <td>切換階段</td>
         <td>80</td>
     </tr>
@@ -374,62 +374,62 @@ a:hover {
         <td>一般</td>
         <td>對戰階段</td>
         <td>Y, Y</td>
-        <td>Cancelled with a Pokémon move. Press R during Bad Dreams Rising to transition into Teleportation</td>
+        <td>可被寶可夢招式取消。惡夢纏身狀態下按 R 可轉換為瞬間移動</td>
         <td>60</td>
     </tr>
     <tr>
-        <td>Weak Attack ~ Strong Attack Follow-up</td>
+        <td>弱攻擊～強攻擊追擊</td>
         <td>一般</td>
         <td>對戰階段</td>
         <td>Y, X</td>
-        <td>Places a Phantom.</td>
+        <td>放置一個幻影</td>
         <td>80</td>
     </tr>
     <tr>
-        <td>Weak Attack ~ Strong Attack Follow-up: Charge</td>
+        <td>弱攻擊～強攻擊追擊：蓄力</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Y, Hold X,</td>
-        <td>Places a Phantom. Pierces 反擊 attacks</td>
+        <td>Y, 長按 X</td>
+        <td>放置一個幻影。可貫穿反擊</td>
         <td>100</td>
     </tr>
     <tr>
         <td>前方弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Forward + Y</td>
-        <td>Press buttons together to increase power</td>
+        <td>前 + Y</td>
+        <td>同時按下按鈕可提升威力</td>
         <td>40</td>
     </tr>
     <tr>
         <td>後方弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Backward + Y, Y, Y</td>
-        <td>Press buttons with right timing for power ip</td>
+        <td>後 + Y，Y，Y</td>
+        <td>按鈕時機正確可提升威力</td>
         <td>60</td>
     </tr>
     <tr>
         <td>高姿勢弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Up + Y</td>
+        <td>上 + Y</td>
         <td>對空中對手有效</td>
         <td>75</td>
     </tr>
     <tr>
-        <td>High Stance Weak Attack: Charge</td>
+        <td>高姿勢弱攻擊：蓄力</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Up + Hold Y</td>
+        <td>上 + 長按 Y</td>
         <td>無特殊效果</td>
         <td>72</td>
     </tr>
     <tr>
-        <td>Poké Combo 4</td>
+        <td>寶可連擊4</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Down + Y, Y</td>
+        <td>下 + Y，Y</td>
         <td>無特殊效果</td>
         <td>74</td>
     </tr>
@@ -437,31 +437,31 @@ a:hover {
         <td>低姿勢弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Down + Y</td>
-        <td>Cancelled with a Pokémon move. Press R during Bad Dreams Rising to transition into Teleportation</td>
+        <td>下 + Y</td>
+        <td>可被寶可夢招式取消。惡夢纏身狀態下按 R 可轉換為瞬間移動</td>
         <td>30</td>
     </tr>
     <tr>
-        <td>Low Stance Weak Attack ~ Strong Attack Follow-up</td>
+        <td>低姿勢弱攻擊～強攻擊追擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Down + Y, X</td>
-        <td>Places a Phantom. 擊倒對手</td>
+        <td>下 + Y，X</td>
+        <td>放置一個幻影。擊倒對手</td>
         <td>74</td>
     </tr>
     <tr>
         <td>空中弱攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Midair Y</td>
-        <td>Cancelled with a Pokémon move. Press R during Bad Dreams Rising to transition into Teleportation</td>
+        <td>空中 Y</td>
+        <td>可被寶可夢招式取消。惡夢纏身狀態下按 R 可轉換為瞬間移動</td>
         <td>18</td>
     </tr>
     <tr>
-        <td>Poké Combo 5</td>
+        <td>寶可連擊5</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>X, X</td>
+        <td>X，X</td>
         <td>無特殊效果</td>
         <td>88</td>
     </tr>
@@ -470,63 +470,63 @@ a:hover {
         <td>一般</td>
         <td>對戰階段</td>
         <td>X</td>
-        <td>Cancelled with a Pokémon move. Places a Phantom. Press R during Bad Dreams Rising to transition into Teleportation</td>
+        <td>可被寶可夢招式取消。放置一個幻影。惡夢纏身狀態下按 R 可轉換為瞬間移動</td>
         <td>40</td>
     </tr>
     <tr>
         <td>前方強攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Forward + X</td>
-        <td>Places a Phantom</td>
+        <td>前 + X</td>
+        <td>放置一個幻影</td>
         <td>80</td>
     </tr>
     <tr>
         <td>後方強攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Backward + X</td>
-        <td>Places a Phantom</td>
+        <td>後 + X</td>
+        <td>放置一個幻影</td>
         <td>60</td>
     </tr>
     <tr>
-        <td>Backward Strong Attack: Charge</td>
+        <td>後方強攻擊：蓄力</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Backward + Hold X</td>
-        <td>貫穿反擊</td>
+        <td>後 + 長按 X</td>
+        <td>可貫穿反擊</td>
         <td>90</td>
     </tr>
     <tr>
         <td>高姿勢強攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Up + X</td>
-        <td>Effective against grab attacks. Places a Phantom</td>
+        <td>上 + X</td>
+        <td>對抓取攻擊有效。放置一個幻影</td>
         <td>60</td>
     </tr>
     <tr>
-        <td>High Stance Strong Attack: Charge</td>
+        <td>高姿勢強攻擊：蓄力</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Up + Hold X</td>
-        <td>貫穿反擊. Places a Phantom.</td>
+        <td>上 + 長按 X</td>
+        <td>可貫穿反擊。放置一個幻影</td>
         <td>80</td>
     </tr>
     <tr>
         <td>低姿勢強攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Down + X</td>
-        <td>Places a Phantom. 擊倒對手</td>
+        <td>下 + X</td>
+        <td>放置一個幻影。擊倒對手</td>
         <td>60</td>
     </tr>
     <tr>
         <td>空中強攻擊</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Midair X</td>
-        <td>Places a Phantom</td>
+        <td>空中 X</td>
+        <td>放置一個幻影</td>
         <td>50</td>
     </tr>
 </table><h2>僅限同步爆發時</h2>
@@ -540,65 +540,65 @@ a:hover {
         <th>傷害值</th>
     </tr>
     <tr>
-        <td>Special Effects 1</td>
+        <td>特殊效果1</td>
         <td>無傷害</td>
         <td>對戰階段</td>
         <td></td>
-        <td>Properties changed of forward and backward dash steps.</td>
+        <td>前衝和後衝步伐的屬性改變</td>
         <td>0</td>
     </tr>
     <tr>
-        <td>Special Effects 2</td>
+        <td>特殊效果2</td>
         <td>無傷害</td>
         <td>對戰階段</td>
         <td></td>
-        <td>Phantom attacks are launched automatically</td>
+        <td>幻影攻擊自動發動</td>
         <td>0</td>
     </tr>
     <tr>
-        <td>Special Effects 3</td>
+        <td>特殊效果3</td>
         <td>無傷害</td>
         <td>對戰階段</td>
         <td></td>
-        <td>Releases in 場地階段 Phase or when 抓取 is used</td>
+        <td>在場地階段或使用抓取時釋放</td>
         <td>0</td>
     </tr>
     <tr>
-        <td>Dark Void (Enhanced)</td>
+        <td>暗黑洞（強化）</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Forward +A</td>
+        <td>前 + A</td>
         <td>無特殊效果</td>
         <td>80</td>
     </tr>
     <tr>
-        <td>Dark Void (Enhanced): Charge</td>
+        <td>暗黑洞（強化）：蓄力</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Forward + Hold A</td>
+        <td>前 + 長按 A</td>
         <td>無特殊效果</td>
         <td>120</td>
     </tr>
     <tr>
-        <td>Nightmare</td>
+        <td>惡夢</td>
         <td>一般</td>
         <td>對戰階段</td>
-        <td>Up + A</td>
-        <td>反擊s attacks. Invincible when invisible. Transitions into midair attacks</td>
+        <td>上 + A</td>
+        <td>可反擊攻擊。隱形時無敵。可轉換為空中攻擊</td>
         <td>82</td>
     </tr>
     <tr>
-        <td>Dream Eater</td>
+        <td>食夢</td>
         <td>抓取</td>
         <td>對戰階段</td>
-        <td>Down + A</td>
-        <td>Absorbs Hit Points. Increases Synergy Gauge</td>
+        <td>下 + A</td>
+        <td>吸收生命值。增加同步能量</td>
         <td>150</td>
     </tr>
 </table>
     
     <div style="text-align: center; margin-top: 30px; color: #888;">
-        <p>資料來源: Serebii.net - 自動生成招式表</p>
+        <p>資料來源：Serebii.net - 自動產生招式表</p>
         <p><a href="index.html">返回首頁</a></p>
     </div>
 </body>
